# docs/swagger.json
@@ -65,6 +65,36 @@
                         "description": "Created"
                     }
                 }
+            },
+            "delete": {
+                "description": "Delete item from shopping list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "shopping-list"
+                ],
+                "summary": "Delete from shopping list",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "shopping item id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
             }
         }
     },
